<resources>
    <string name="app_name">Labyrinth</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sound">Sound</string>
    <string name="check">check</string>
    <string name="ip_address">Ip Address</string>
    <string name="raspberry">RaspBerry</string>
    <string name="play">Play</string>
    <string name="top_records">Top Records</string>
</resources>