<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartFragment"
    android:id="@+id/fragmentStart"
    android:background="@drawable/gradient_background"
    >

    <Button
        android:id="@+id/startGameButton"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:background="@drawable/customize_button_play"
        android:text="@string/play"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.559"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.789" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="122dp"
        android:layout_height="133dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/labyrinth"
        app:layout_constraintBottom_toTopOf="@+id/soundSwitchSettings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.067" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleX="1.5"
        android:scaleY="1.5"
        android:theme="@style/FilterSwitchTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.89"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/raspberry"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="@+id/switch1"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toTopOf="@+id/switch1"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/editTextIpAddress"
        android:layout_width="171dp"
        android:layout_height="52dp"
        android:autofillHints="Ip"
        android:ems="10"
        android:hint="@string/ip_address"
        android:inputType="textPersonName"
        android:visibility="gone"
        app:backgroundTint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/checkMQTT"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/switch1"
        app:layout_constraintVertical_bias="0.091" />

    <Button
        android:id="@+id/checkMQTT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/editTextIpAddress"
        app:layout_constraintEnd_toEndOf="@+id/switch1"
        app:layout_constraintTop_toTopOf="@+id/editTextIpAddress"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/sound"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toStartOf="@+id/soundSwitchSettings"
        app:layout_constraintHorizontal_bias="0.354"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/soundSwitchSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleX="1.5"
        android:scaleY="1.5"
        android:theme="@style/FilterSwitchTheme"
        app:layout_constraintBottom_toBottomOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="@+id/switch1"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/switch1"
        app:layout_constraintTop_toTopOf="@+id/textView5"
        app:layout_constraintVertical_bias="0.0" />

    <com.airbnb.lottie.LottieAnimationView
        android:layout_width="59dp"
        android:layout_height="71dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView5"
        app:layout_constraintEnd_toStartOf="@+id/textView5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView5"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/sound" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottieAnimationView2"
        android:layout_width="69dp"
        android:layout_height="66dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView4"
        app:layout_constraintEnd_toStartOf="@+id/textView4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView4"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/joystick" />

    <TextView
        android:id="@+id/records"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/top_records"
        android:textSize="20sp"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.59"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startGameButton"
        app:layout_constraintVertical_bias="0.328"
        android:textColor="@color/black"
        android:focusable="true" />

    <com.airbnb.lottie.LottieAnimationView
        android:layout_width="45dp"
        android:layout_height="46dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/records"
        app:layout_constraintEnd_toStartOf="@+id/records"
        app:layout_constraintTop_toTopOf="@+id/records"
        app:lottie_rawRes="@raw/ranking"
        app:lottie_loop="true"
        app:lottie_autoPlay="true"
        android:visibility="visible"
        />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/loader"
        android:layout_width="285dp"
        android:layout_height="96dp"
        android:layout_marginTop="50dp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/startGameButton"
        app:layout_constraintEnd_toEndOf="@+id/checkMQTT"
        app:layout_constraintStart_toStartOf="@+id/editTextIpAddress"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/connectingdots" />


</androidx.constraintlayout.widget.ConstraintLayout>